--- a/src/client/components/AddToLibrary/AddToLibrary.scss
+++ b/src/client/components/AddToLibrary/AddToLibrary.scss
@@ -1,3 +1,8 @@
 .AddToLibrary {
   outline: none;
-  font-size: 30rem; }
+  color: #757575;
+  font-size: 30rem;
+  transition: .2s all;
+  border-radius: 100%;
+  &:hover {
+    background-color: #e0e0e0; } }
