--- a/src/client/components/Player/Player.scss
+++ b/src/client/components/Player/Player.scss
@@ -9,6 +9,7 @@
       width: 30vw;
       height: auto;
       display: block;
+      border-radius: 5px;
       margin-bottom: 40px;
       box-shadow:
         0 3px 6px rgba(#000000, .16),
