--- a/src/client/components/Player/Player.scss
+++ b/src/client/components/Player/Player.scss
@@ -2,8 +2,20 @@
   width: 100%;
   height: 100%;
   display: flex;
+  position: relative;
   align-items: center;
   justify-content: center;
+  &__close {
+    top: 0;
+    left: 0;
+    margin: 20px;
+    padding: 10px;
+    font-size: 40rem;
+    position: absolute;
+    transition: .2s all;
+    border-radius: 100%;
+    &:hover {
+      background-color: #e0e0e0; } }
   &__main {
     &-cover {
       width: 30vw;
