--- a/src/client/components/IconText/IconText.scss
+++ b/src/client/components/IconText/IconText.scss
@@ -1,6 +1,22 @@
+@import "../../globals/index.scss";
+
 .IconText {
+  border: 0;
+  outline: none;
+  display: flex;
+  padding: 10px;
   cursor: pointer;
+  align-items: center;
+  background-color: #E0E0E0;
+  border-radius: $BORDER_RADIUS;
+  transition: .2s background-color;
+  box-shadow: 0 1px 4px 0 rgba(51, 51, 51, 0.3);
+  &:hover {
+    background-color: #BDBDBD; }
+  &__icon {
+    outline: none;
+    font-size: 24rem;
+    margin-right: 8px; }
   &__text {
-    color: #ffffff;
-    margin-top: 5px;
+    font-size: 18rem;
     user-select: none; } }
