--- a/src/client/components/AlbumPage/AlbumPage.scss
+++ b/src/client/components/AlbumPage/AlbumPage.scss
@@ -8,44 +8,38 @@
     display: block;
     margin-bottom: 20px;
     box-shadow: 0 1px 4px 0 rgba(#333333, .3);
-    @media (min-width: 700px) {
+    @media (min-width: 600px) {
       width: 400px;
       height: 400px; } }
-  &__main {
-    width: 100%; }
-    &__title {
-      display: flex;
-      margin-bottom: 8px;
-      align-items: center;
-      &-text {
-        font-size: 26rem;
-        @media (min-width: 700px) {
-          font-size: 30rem; } }
-      &-add {
-        display: block;
-        font-size: 25rem;
-        margin-left: 5px;
-        transition: .2s all;
-        border-radius: 100%;
-        &:hover {
-          background-color: #e0e0e0; } } }
-    &__genres,
-    &__artists {
-      font-size: 17rem;}
-    &__genres {
-      font-weight: 400;
-      margin-bottom: 10px; }
-    &__artists {
-      font-weight: 500;
-      margin-bottom: 15px; }
-    &__controls {
-      margin-bottom: 20px; }
-    &__disc {
-      margin-bottom: 15px;
-      &:last-child {
-        margin-bottom: 0; }
-      &-number {
-        font-size: 15rem;
-        font-weight: 700;
-        margin-bottom: 10px;
-        text-transform: uppercase; } } }
+  &__title {
+    display: flex;
+    margin-bottom: 8px;
+    align-items: center;
+    &-text {
+      font-size: 26rem;
+      @media (min-width: 700px) {
+        font-size: 30rem; } }
+    &-add {
+      font-size: 25rem;
+      margin-left: 5px;
+      border-radius: 100%; } }
+  &__info,
+  &__artists {
+    font-size: 17rem;}
+  &____info {
+    font-weight: 400;
+    margin-bottom: 10px; }
+  &__artists {
+    font-weight: 500;
+    margin-bottom: 15px; }
+  &__controls {
+    margin-bottom: 20px; }
+  &__disc {
+    margin-bottom: 15px;
+    &:last-child {
+      margin-bottom: 0; }
+    &-number {
+      font-size: 15rem;
+      font-weight: 700;
+      margin-bottom: 10px;
+      text-transform: uppercase; } } }
