--- a/src/client/components/Form/FormRemember/FormRemember.scss
+++ b/src/client/components/Form/FormRemember/FormRemember.scss
@@ -3,7 +3,7 @@
   cursor: pointer;
   align-items: center;
   margin-bottom: 25px;
-  &__check-box {
+  &__check {
     width: 18px;
     height: 18px;
     cursor: pointer;
