--- a/src/client/index.scss
+++ b/src/client/index.scss
@@ -16,7 +16,7 @@
   line-height: inherit; }
 
 html {
-  color: $TEXT;
+  color: $TEXT_COLOR;
   font-size: $FONT_SIZE;
   box-sizing: border-box;
   line-height: $LINE_HEIGHT;
