--- a/src/client/globals/index.scss
+++ b/src/client/globals/index.scss
@@ -1,20 +1,14 @@
-$TEXT: #333333;
+$TEXT_COLOR: #333333;
+$TEXT_COLOR_LIGHT: #757575;
+
 $FONT_SIZE: 1px;
 $LINE_HEIGHT: 1;
 $FONT_FAMILY: "Roboto";
 
-$PRIMARY: #00897b;
-$PRIMARY_LIGHT: #4ebaaa;
-$PRIMARY_DARK: #005b4f;
-$PRIMARY_TEXT: #fafafa;
-
-$SECONDARY: #546e7a;
-$SECONDARY_LIGHT: #819ca9;
-$SECONDARY_DARK: #29434e;
-$SECONDARY_TEXT: #fafafa;
-
 $BORDER_RADIUS: 5px;
 
 $HEADER_HEIGHT: 60px;
-
 $PLAYER_HEIGHT: 96px;
+
+$BOX_SHADOW: 0 3px 6px rgba(#333, .16), 0 3px 6px rgba(#333, .23);
+$BOX_SHADOW_LIGHT: 0 2px 4px rgba(#333, .1);
