--- a/src/client/components/Empty/Empty.scss
+++ b/src/client/components/Empty/Empty.scss
@@ -1,3 +1,5 @@
+@import "../../globals/index.scss";
+
 .Empty {
   width: 100%;
   height: 100%;
@@ -8,6 +10,7 @@
   &__icon {
     font-size: 50rem;
     user-select: none;
+    color: $TEXT_COLOR;
     margin-bottom: 15px;}
   &__title {
     font-size: 25rem;
