--- a/src/client/components/PlayerBar/PlayerBar.scss
+++ b/src/client/components/PlayerBar/PlayerBar.scss
@@ -13,6 +13,7 @@
   &__icon {
     outline: none;
     font-size: 40rem;
+    color: $TEXT_COLOR;
     transition: .2s all;
     border-radius: 100%;
     &:hover {
