--- a/src/client/components/ArtistPage/ArtistPage.scss
+++ b/src/client/components/ArtistPage/ArtistPage.scss
@@ -2,6 +2,8 @@
   height: 100%;
   padding: 20px;
   overflow: auto;
+  &__spinner {
+    padding: 20px; }
   &__cover {
     width: 100%;
     height: auto;
