--- a/src/client/components/Queues/Queues.scss
+++ b/src/client/components/Queues/Queues.scss
@@ -1,7 +1,9 @@
 @import "../../globals/index.scss";
 
 .Queues {
+  width: 1200px;
   padding: 20px;
+  margin: 0 auto;
   &__section {
     padding: 20px;
     margin-bottom: 12px;
