--- a/src/client/globals/index.scss
+++ b/src/client/globals/index.scss
@@ -9,6 +9,7 @@ $BORDER_RADIUS: 5px;
 
 $HEADER_HEIGHT: 60px;
 $PLAYER_HEIGHT: 96px;
+$PLAYER_HEIGHT_MOBILE: 120px;
 
 $BOX_SHADOW: 0 3px 6px rgba(#333, .16), 0 3px 6px rgba(#333, .23);
 $BOX_SHADOW_LIGHT: 0 2px 4px rgba(#333, .1);
