--- a/src/client/components/Album/Album.scss
+++ b/src/client/components/Album/Album.scss
@@ -16,23 +16,24 @@
       &-artists {
         display: block;
         overflow: hidden;
-        max-height: 14rem;
-        @media (min-width: 600px) {
-          max-height: 16rem; } }
+        max-height: 16rem;
+        @media (max-width: 600px) {
+          max-height: 14rem; } }
       &-title {
-        font-size: 14rem;
+        font-size: 16rem;
         font-weight: 700;
         margin-bottom: 3px;
-        @media (min-width: 600px) {
-          font-size: 16rem; } }
+        @media (max-width: 600px) {
+          font-size: 14rem; } }
       &-artists {
-        font-size: 14rem;
+        font-size: 15rem;
         font-weight: 400;
-        @media (min-width: 600px) {
-          font-size: 15rem; } } }
+        @media (max-width: 600px) {
+          font-size: 14rem; } } }
     &-add {
       opacity: 0;
-      padding: 5px;
+      margin: 2px;
+      padding: 3px;
       display: block;
       color: #757575;
       font-size: 25rem;
