--- a/src/client/components/Catalog/Browse/Browse.scss
+++ b/src/client/components/Catalog/Browse/Browse.scss
@@ -5,9 +5,10 @@
   &__main {
     z-index: 1;
     width: 100%;
-    padding: 15px;
+    padding: 20px;
     overflow: auto;
     box-shadow: none;
-    @media (min-width: 700px) {
-      padding: 20px; }
-    height: calc(100vh - #{$HEADER_HEIGHT} - #{$HEADER_HEIGHT} - #{$PLAYER_HEIGHT}); } }
+    height: calc(100vh - #{$HEADER_HEIGHT} - #{$HEADER_HEIGHT} - #{$PLAYER_HEIGHT});
+    @media(max-width: 700px) {
+      padding: 15px;
+      height: calc(100vh - #{$HEADER_HEIGHT} - #{$HEADER_HEIGHT} - #{$PLAYER_HEIGHT_MOBILE}); } } }
