--- a/src/client/components/Genre/Genre.scss
+++ b/src/client/components/Genre/Genre.scss
@@ -4,12 +4,15 @@
   display: flex;
   border-radius: 3px;
   align-items: center;
-  flex-direction: column;
   box-shadow: $BOX_SHADOW;
   background-color: transparent;
   &__name {
     margin: 0;
     width: 100%;
     padding: 10px;
-    font-size: 20rem;
-    border-radius: 0 0 3px 3px; } }
+    font-size: 19rem;
+    border-radius: 0 0 3px 3px; }
+  &__add {
+    margin: 5px;
+    padding: 3px;
+    font-size: 25rem; } }
