--- a/src/client/components/PlayerBar/PlayerBar.scss
+++ b/src/client/components/PlayerBar/PlayerBar.scss
@@ -4,8 +4,12 @@
   z-index: 4; 
   width: 100%;
   display: flex;
+  flex-direction: row;
   height: $PLAYER_HEIGHT;
   box-shadow: $BOX_SHADOW;
+  @media(max-width: 700px) {
+    height: $PLAYER_HEIGHT_MOBILE;
+    flex-direction: column-reverse; }
   &__link {
     text-decoration: none;
     &:hover {
@@ -16,6 +20,8 @@
     color: $TEXT_COLOR;
     transition: .2s all;
     border-radius: 100%;
+    @media(max-width: 700px) {
+      font-size: 33rem; }
     &:hover {
       background-color: #e0e0e0; } }
   &__main,
@@ -25,22 +31,27 @@
     padding: 15px;
     display: flex;
     align-items: center;
-    border-right: 1px solid #e0e0e0; }
+    border-right: 1px solid #e0e0e0;
+    @media(max-width: 700px) {
+      padding: 8px;
+      justify-content: center; } }
   &__main {
     width: 100%;
     padding: 15px 19px 13px 19px;
+    @media(max-width: 700px) {
+      padding: 8px 8px 10px 8px;
+      border-bottom: 1px solid #e0e0e0; }
     &-info {
       display: flex;
       padding-bottom: 13px;
       justify-content: space-between;
+      @media(max-width: 700px) {
+        padding-bottom: 4px; }
       &-right {
         display: flex;
         margin-top: 2px;
         align-items: center;
-        &-volume,
-        &-queues {
-          margin-right: 10px; }
+        &-icon {
+          margin-right: 5px; }
         &-volume {
-          font-size: 35rem; }
-        &-fullscreen {
-          margin-right: -7px; } } } } }
+          margin-right: 0; } } } } }
