--- a/src/client/components/Progress/Progress.scss
+++ b/src/client/components/Progress/Progress.scss
@@ -5,8 +5,12 @@
   align-items: center;
   &__end,
   &__start {
-    font-size: 14px; }
+    font-size: 14rem;
+    @media(max-width: 600px) {
+      font-size: 12rem; } }
   &__slider {
     width: 100%;
     height: 100%;
-    margin: 0 15px 17px 15px; } }
+    margin: 0 15px 17px 15px;
+    @media(max-width: 600px) {
+      margin: 0 12px 28px 12px; }  } }
