--- a/src/client/components/Artist/Artist.scss
+++ b/src/client/components/Artist/Artist.scss
@@ -1,8 +1,6 @@
 @import "../../globals/index.scss";
 
 .Artist {
-  &:hover &__info-add {
-    opacity: 1; }
   &__cover:before {
     padding-top: 56.25%; }
   &__info {
@@ -15,7 +13,5 @@
       padding-top: 10px;
       font-size: 20rem; }
     &-add {
-      opacity: 0;
       margin-top: 4px;
-      font-size: 26rem;
-      transition: .4s opacity;  } } }
+      font-size: 26rem; } } }
