--- a/src/client/components/Form/index.scss
+++ b/src/client/components/Form/index.scss
@@ -1,9 +1,2 @@
 .Form {
-  width: 100%;
-  padding: 15px;
-  border-radius: 4px;
-  border: 1px solid #e0e0e0;
-  background-color: #ffffff;
-  @media (min-width: 582px) {
-    width: 542px;
-    padding: 20px; } }
+  width: 100%; }
