--- a/src/client/components/Header/Sidebar/index.scss
+++ b/src/client/components/Header/Sidebar/index.scss
@@ -5,45 +5,27 @@
   left: -300px;
   width: 300px;
   cursor: default;
-  padding: $SPACE 0;
   position: absolute;
   top: $HEADER_HEIGHT;
   background-color: #ffffff;
   border-right: 1px solid #e0e0e0;
-  height: calc(100vh - #{$HEADER_HEIGHT} - #{$PLAYER_HEIGHT});
+  height: calc(100vh - #{$HEADER_HEIGHT});
+  padding: calc(#{$SPACE_HALF} + #{$SPACE_QUART}) 0;
   &__routes {
     display: flex;
     flex-direction: column; }
-    &__route,
-    &__subRoute,
-    &__subSubRoute {
-      display: flex;
-      flex-direction: column;
-      &:last-child {
-        margin-bottom: 0; } }
-      &__route {
-        margin-bottom: 10px; }
-      &__link {
-        color: #333333;
-        font-size: 26rem;
-        font-weight: 300;
-        text-decoration: none;
-        padding: 5px 0 5px 20px;
-        &:hover {
-          background-color: rgba(#333333, .3); } }
-      &__subLink {
-        color: #333333;
-        font-size: 20rem;
-        font-weight: 500;
-        text-decoration: none;
-        padding: 5px 0 5px 35px;
-        &:hover {
-          background-color: rgba(#333333, .3); } }
-        &__subSubLink {
-          color: #333333;
-          font-size: 16rem;
-          font-weight: 400;
-          text-decoration: none;
-          padding: 5px 0 5px 55px;
-          &:hover {
-            background-color: rgba(#333333, .3); } } }
+  &__route {
+    display: flex;
+    align-items: center;
+    padding: $SPACE_HALF $SPACE;
+    text-decoration: none !important;
+    &:hover {
+      background-color: #e0e0e0; }
+    &-icon {
+      font-size: 27rem;
+      color: $TEXT_COLOR;
+      margin-right: $SPACE_HALF; }
+    &-text {
+      font-weight: 600;
+      font-size: 18rem;
+      text-transform: uppercase; } } }
