--- a/src/client/components/Application/index.scss
+++ b/src/client/components/Application/index.scss
@@ -2,7 +2,7 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500,700&display=swap");
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 
-@import "../../globals/index.scss";
+@import "../../index.scss";
 
 *,
 *:after,
