--- a/src/client/components/ApiError/index.scss
+++ b/src/client/components/ApiError/index.scss
@@ -5,6 +5,7 @@
   width: 100vw;
   height: 100vh;
   font-size: 18rem;
+  font-weight: 500;
   position: absolute;
   padding: var(--space);
   font-family: monospace;
