--- a/src/client/components/GenrePage/index.scss
+++ b/src/client/components/GenrePage/index.scss
@@ -7,6 +7,4 @@
     background: #6190E8;
     box-shadow: var(--box-shadow);
     padding: calc(var(--space) * 1.5);
-    background: linear-gradient(to right, #ada996, #f2f2f2, #dbdbdb, #eaeaea); }
-  &__songs {
-    padding: var(--space); } }
+    background: linear-gradient(to right, #ada996, #f2f2f2, #dbdbdb, #eaeaea); } }
