--- a/src/client/components/ArtistPage/index.scss
+++ b/src/client/components/ArtistPage/index.scss
@@ -4,50 +4,43 @@
   &__cover {
     width: 100%;
     height: 30vh;
-    &:before {
-      padding-top: 56.25%; }
     &-img {
       filter: blur(1px);
       background-position: top; } 
-    &-name {
+    &-content {
+      left: 0;
+      bottom: 0;
       z-index: 2;
-      display: flex;
       position: absolute;
-      align-items: center;
-      left: calc(var(--space) * 2);
-      bottom: calc(var(--space) * 2);
-      margin-bottom: calc(var(--space) * .4);
-      &-text, &-add {
-        font-weight: 700;
+      &-name,
+      &-stats {
         color: var(--text-color-white); }
-      &-text {
-        font-size: 60rem; }
-      &-add {
-        width: 30rem;
-        height: 30rem;
-        font-size: 30rem;
-        margin-top: 7rem;
-        margin-left: calc(var(--space) * .75);
-        &:hover {
-          background-color: rgba(#000, .3) !important; } } }
+      &-name {
+        display: flex;
+        font-weight: 700;
+        align-items: center;
+        margin-bottom: calc(var(--space) * .25);
+        &-text {
+          font-size: 60rem; }
+        &-add {
+          width: 30rem;
+          height: 30rem;
+          font-size: 30rem;
+          margin-top: 7rem;
+          color: var(--text-color-white);
+          margin-left: calc(var(--space) * .5);
+          &:hover {
+            background-color: rgba(#000, .2) !important; } } }
+      &-stats {
+        font-size: 17rem; } }
     &-black {
       top: 0;
       left: 0;
       width: 100%;
       height: 100%;
-      transition: 500ms;
       position: absolute;
-      -webkit-transition: 500ms;
       background: radial-gradient(
         ellipse farthest-corner at center center,
         rgba(#000, .2) 20%,
         rgba(#000, .7) 100%
-      ) repeat scroll 0% 0%; } }
-  &__main {
-    overflow: auto;
-    padding: var(--space); }
-  &__length,
-  &__albums {
-    margin-bottom: var(--space); }
-  &__length {
-    font-size: 17rem; } }
+      ) repeat scroll 0% 0%; } } }
