--- a/src/client/css/customProperties.scss
+++ b/src/client/css/customProperties.scss
@@ -11,6 +11,7 @@
   --font-family: "Roboto";
 
   --line-height: 1;
+  --info-height: 35rem;
   --header-height: 60px;
   --player-height: 96px;
   --player-height-mobile: 120px;
