--- a/src/client/components/InfoImg/index.scss
+++ b/src/client/components/InfoImg/index.scss
@@ -1,9 +1,10 @@
 .InfoImg {
+  width: 100%;
   display: flex;
   align-items: center;
   &__cover {
-    width: 35px;
-    height: 35px;
-    margin-right: var(--gap);
+    width: 35rem;
+    height: 35rem;
+    margin-right: calc(var(--space) * .5);
     &-img {
       border-radius: var(--text-border-radius); } } }
