--- a/src/client/components/Item/index.scss
+++ b/src/client/components/Item/index.scss
@@ -4,19 +4,44 @@
   --gap: calc(var(--space) * .5);
   display: flex;
   align-items: center;
-  flex-direction: row;
-  border-bottom: $border;
-  padding: 0 calc(var(--space) * .75);
   &:hover &__info-text {
     width: calc(100% - var(--gap) - var(--button-size)); }
   &:hover &__info-add {
     display: block; }
   &__play {
-    margin-right: calc(var(--space) * .5);
-    margin-left: calc(var(--space) * -.25); }
+    --fix: -2px; 
+    margin-left: var(--fix);
+    margin-right: calc(var(--gap) + var(--fix)); }
+  &__img-link {
+    margin-right: var(--gap); }
+  &__img {
+    width: var(--info-height);
+    height: var(--info-height); }
   &__info {
-    --padding: calc(var(--space) * .5);
-    overflow: hidden;
-    padding: var(--padding) 0 calc(var(--padding) - 1px) 0;
+    width: 100%;
+    display: flex;
+    overflow-x: hidden;
+    align-items: center;
+    &-text {
+      width: 100%;
+      &-upper,
+      &-lower {
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis; }
+      &-upper {
+        font-weight: 700;
+        font-size: 16rem;
+        max-height: 16rem;
+        margin-bottom: 4rem; }
+      &-lower {
+        font-size: 15rem;
+        max-height: 15rem;} } 
     &-add {
-      margin-left: var(--gap); } } }
+      display: none;
+      margin-left: var(--gap);
+      background-color: var(--color-elevated); } }
+  &__right {
+    font-size: 16rem;
+    margin: 0 var(--gap);
+    color: var(--text-color-light); } }
