--- a/src/client/components/PlayerBar/index.scss
+++ b/src/client/components/PlayerBar/index.scss
@@ -7,9 +7,6 @@
   box-shadow: $box-shadow-5;
   height: var(--player-height);
   background-color: var(--elevated-color);
-  @media(max-width: 700px) {
-    flex-direction: column-reverse;
-    height: var(--player-height-mobile); }
   &__icon {
     color: var(--text-color); }
   &__main,
@@ -21,15 +18,11 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    @media(max-width: 700px) {
-      padding: 8px 8px 10px 8px;
-      border-bottom: 1px solid var(--border-color); }
+    justify-content: space-evenly;
     &-info {
       display: flex;
       flex-direction: row-reverse;
       justify-content: space-between;
-      margin-bottom: calc(var(--space) * .75);
       &-controls {
         display: flex;
         align-items: center;
