--- a/src/client/components/UserPage/index.scss
+++ b/src/client/components/UserPage/index.scss
@@ -1,7 +1,6 @@
 .UserPage {
   &__name {
-    font-size: 30rem;
-    margin-bottom: var(--space); }
+    font-size: 30rem; }
   &__option-text {
     font-size: 18rem;
     margin-bottom: calc(var(--space) * .25); }
