--- a/src/client/components/Player/index.scss
+++ b/src/client/components/Player/index.scss
@@ -1,46 +1,46 @@
 .Player {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  position: relative;
-  align-items: center;
-  justify-content: center;
+  top: 0;
+  left: 0;
+  z-index: 99;
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  &__main,
+  &__spinner {
+    top: 50%;
+    left: 50%;
+    position: absolute;
+    transform: translate(-50%, -54%); }
   &__close {
+    --font-size: 40rem;
+    --padding: calc(var(--space) * .5);
+    --height: calc(var(--font-size) + var(--padding) * 2);
     top: 0;
     left: 0;
-    padding: 10px;
-    font-size: 40rem;
     position: absolute;
-    transition: .2s all;
     border-radius: 100%;
-    margin: var(--space);
-    &:hover {
-      background-color: var(--hover-color); } }
+    width: var(--height);
+    height: var(--height);
+    margin: var(--padding);
+    padding: var(--padding);
+    color: var(--text-color);
+    font-size: var(--font-size); }
   &__main {
     display: flex;
     align-items: center;
     flex-direction: column;
     &-cover {
-      width: 30vw;
+      width: 25vw;
       height: auto;
-      display: block;
-      border-radius: var(--border-radius);
-      margin-bottom: calc(var(--space) * 2);
-      box-shadow:
-        0 3px 6px rgba(#000000, .16),
-        0 3px 6px rgba(#000000, .23); }
-    &-title,
-    &-album,
-    &-artists {
+      margin-bottom: calc(var(--space) * 2); }
+    &-info,
+    &-title{
       text-align: center; }
     &-title {
-      font-size: 35rem;
+      font-size: 30rem;
       font-weight: 700;
-      margin-bottom: 12px; }
-    &-album {
-      font-size: 23rem;
+      margin-bottom: calc(var(--space) * .75); }
+    &-info {
+      font-size: 20rem;
       font-weight: 400;
-      margin-bottom: 12px; }
-    &-artists {
-      font-weight: 500;
-      font-size: 23rem; } } }
+      margin-bottom: calc(var(--space) * 2.25);} } }
