--- a/src/client/css/classes.scss
+++ b/src/client/css/classes.scss
@@ -33,6 +33,8 @@
       0 0 5px -1px rgba($shadow-color, .20); } }
 
 .Button {
+  border: none;
+  outline: none;
   background-color: #e0e0e0;
   border-radius: var(--border-radius); }
 
@@ -49,3 +51,6 @@
   border-bottom: $border;
   &:last-child {
     border-bottom: none; } }
+
+.Text {
+  font-size: 16rem; }
