--- a/src/client/components/ApiError/index.scss
+++ b/src/client/components/ApiError/index.scss
@@ -4,6 +4,7 @@
   z-index: 99;
   width: 100vw;
   height: 100vh;
+  overflow: auto;
   font-size: 18rem;
   font-weight: 500;
   position: absolute;
