--- a/src/client/components/Item/index.scss
+++ b/src/client/components/Item/index.scss
@@ -1,7 +1,7 @@
 @import "../../css/variables.scss";
 
 .Item {
-  --gap: calc(var(--space) * .5);
+  --gap: calc(var(--space) * .4);
   display: flex;
   align-items: center;
   &:hover &__info-text {
@@ -22,6 +22,7 @@
     display: flex;
     overflow-x: hidden;
     align-items: center;
+    height: var(--info-height);
     &-text {
       width: 100%;
       &-upper,
@@ -32,11 +33,9 @@
       &-upper {
         font-weight: 700;
         font-size: 16rem;
-        max-height: 16rem;
         margin-bottom: 4rem; }
       &-lower {
-        font-size: 15rem;
-        max-height: 15rem;} } 
+        font-size: 15rem; } } 
     &-add {
       display: none;
       margin-top: 1px;
@@ -50,6 +49,6 @@
     text-align: center;
     margin: 0 var(--gap) 0 calc(var(--gap) - 4rem); }
   &__right {
-    margin: 0 var(--gap);
     margin-top: 2px;
+    margin-left: var(--gap);
     color: var(--text-color-light); } }
