--- a/src/client/components/Progress/index.scss
+++ b/src/client/components/Progress/index.scss
@@ -1,16 +1,9 @@
 .Progress {
   width: 100%;
-  height: 12px;
   display: flex;
+  height: 16rem;
   align-items: center;
-  &__end,
-  &__start {
-    font-size: 14rem;
-    @media(max-width: 600px) {
-      font-size: 12rem; } }
   &__slider {
     width: 100%;
     height: 100%;
-    margin: 0 15px 17px 15px;
-    @media(max-width: 600px) {
-      margin: 0 12px 28px 12px; }  } }
+    margin: 0 15px 17px 15px;  } }
